# speech_course

./: pyproject.toml
week_01_DSP/: seminar.ipynb  transforms.py
