[project]
name = "speech-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "catboost>=1.2.7",
    "datasets>=3.3.2",
    "deep-phonemizer>=0.0.19",
    "editdistance>=0.8.1",
    "g2p-en==2.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jiwer>=3.1.0",
    "jupyterlab>=4.3.5",
    "librosa>=0.10.2.post1",
    "lightning>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "praat-parselmouth==0.4.3",
    "protobuf>=5.29.3",
    "pyannote-audio>=3.3.2",
    "pyloudnorm>=0.1.1",
    "sacrebleu>=2.5.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "soundfile==0.13.1",
    "tensorboardx==2.6.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics==0.11.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers==4.31.0",
]
